--- a/video_code/13_oop_fundamentals/a_oop_fundamentals.ipynb
+++ b/video_code/13_oop_fundamentals/a_oop_fundamentals.ipynb
@@ -323,7 +323,10 @@
    "id": "f4e16d2b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "np."
+   ]
   }
  ],
  "metadata": {
