manual and automatic testing

--- a/video_code/15_oop_polymorphism/oop_polymorphism.ipynb
+++ b/video_code/15_oop_polymorphism/oop_polymorphism.ipynb
@@ -95,18 +95,18 @@
     "\n",
     "\n",
     "Operator\tDunder Method\n",
-    "+\t__add__(self, other)\n",
-    "-\t__sub__(self, other)\n",
-    "*\t__mul__(self, other)\n",
-    "/\t__div__(self, other)\n",
-    "//\t__floordiv__(self, other)\n",
-    "%\t__mod__(self, other)\n",
-    "**\t__pow__(self, other)\n",
-    "<\t__lt__(self, other)\n",
-    "<=\t__le__(self, other)\n",
-    ">\t__gt__(self, other)\n",
-    ">=\t__ge__(self, other)\n",
-    "==\t__eq__(self, other)\n"
+    "+\t\\_\\_add\\_\\_(self, other)\n",
+    "-\t\\_\\_sub\\_\\_(self, other)\n",
+    "*\t\\_\\_mul\\_\\_(self, other)\n",
+    "/\t\\_\\_div\\_\\_(self, other)\n",
+    "//\t\\_\\_floordiv\\_\\_(self, other)\n",
+    "%\t\\_\\_mod\\_\\_(self, other)\n",
+    "**\t\\_\\_pow\\_\\_(self, other)\n",
+    "<\t\\_\\_lt\\_\\_(self, other)\n",
+    "<=\t\\_\\_le\\_\\_(self, other)\n",
+    ">\t\\_\\_gt\\_\\_(self, other)\n",
+    ">=\t\\_\\_ge\\_\\_(self, other)\n",
+    "==\t\\_\\_eq\\_\\_(self, other)\n"
    ]
   },
   {
