restructure laborations folder

--- a/laborations/lab1/lab_1.ipynb
+++ b/laborations/lab1/lab_1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "ef1eddf3",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
     "    return seq\n",
     "\n",
     "# calls my function and stores the data under dna_data\n",
-    "dna_data = extract_data(\"data/dna_raw.txt\")\n",
+    "dna_data = extract_data(\"../data/dna_raw.txt\")\n",
     "\n",
     "\n",
     "def plot_dna_seq(dna_data, seq_id, color=''):\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "28d876aa",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
     "    return seq\n",
     "\n",
     "# calls my function and stores the data under dna_data\n",
-    "dna_data = extract_data(\"data/dna_raw_complicated.txt\")\n",
+    "dna_data = extract_data(\"../data/dna_raw_complicated.txt\")\n",
     "\n",
     "\n",
     "def plot_dna_seq(dna_data, seq_id, color=''):\n",
